为“集锦”视图的按钮绑定事件处理器、更新界面样式

--- a/res/ui-skin.css
+++ b/res/ui-skin.css
@@ -70,6 +70,7 @@
 	border-color: #44BB55;
 	background-color: #44BB55;
 }
+.skin-light-green .file-list .file-list-item-folder:hover,
 .skin-light-green .file-list .file-list-item-picture.selected .picture-cover,
 .skin-light-green .file-list .file-list-item-picture:hover .picture-cover {
 	border-color: #44BB55;
