--- a/res/ui-skin.css
+++ b/res/ui-skin.css
@@ -88,6 +88,7 @@
 .skin-light-green starrating .mdi-star {
 	color: #44A340;
 }
+.skin-light-green .dialog-content progressbar,
 .skin-light-green .view-content-wrapper progressbar {
 	background-color: #44A340;
 }
