--- a/res/ui.css
+++ b/res/ui.css
@@ -453,7 +453,10 @@ textedit.dialog-input {
 .dialog-content .dialog-btn {
 	width: 100%;
 	height: 30px;
-	border: 1px sold #e00;
+	padding: 0;
+	background-color: #ddd;
+	box-sizing: border-box;
+	border: 2px solid #ddd;
 }
 .dialog-content .dialog-footer {
 	width: 100%;
@@ -465,16 +468,19 @@ textedit.dialog-input {
 	padding: 0 4px;
 	box-sizing: border-box;
 }
+.dialog-content .dialog-btn-group.one-button {
+	width: 100%;
+	display: block;
+}
+.dialog-content .dialog-btn-group.one-button .dialog-btn {
+	width: 50%;
+	margin: 0 auto;
+}
 .dialog-content .dialog-btn-group:first-child {
 	padding-left: 0;
 }
 .dialog-content .dialog-btn-group:last-child {
 	padding-right: 0;
-}
-.dialog-content .dialog-btn {
-	background-color: #ddd;
-	box-sizing: border-box;
-	border: 2px solid #ddd;
 }
 .dialog-content .dialog-btn:hover {
 	border: 2px solid #aaa;
@@ -501,6 +507,18 @@ textedit.dialog-input {
 	border-color: #a94442;
 	box-shadow: 0 0 6px rgba(169,68,66,0.4);
 }
+.dialog-content progress {
+	width: 100%;
+	height: 14px;
+	display: block;
+	background-color: #eee;
+	margin-bottom: 5px;
+}
+.dialog-content progressbar {
+	width: 100%;
+	height: 100%;
+	background-color: #888;
+}
 
 .view-content-wrapper progress {
 	top: 0;
@@ -513,7 +531,7 @@ textedit.dialog-input {
 .view-content-wrapper progressbar {
 	width: 100%;
 	height: 100%;
-	background-color: #ccc;
+	background-color: #888;
 }
 
 #view-home-content textview:first-child {
