--- a/res/ui.css
+++ b/res/ui.css
@@ -277,9 +277,18 @@
 	display: block;
 	height: 10px;
 }
+time-separator {
+	width: 100%;
+	display: block;
+	margin-top: 30px;
+}
+time-separator:first-child {
+	margin-top: 0;
+}
 .time-separator-title {
 	font-size: 18px;
-	margin: 30px 0 5px 0;
+	margin: 0 0 5px 0;
+	display: block;
 }
 .time-separator-subtitle {
 	color: #666;
