--- a/res/ui.css
+++ b/res/ui.css
@@ -385,15 +385,15 @@ textview {
 .btn:disabled textview {
 	color: #7B7B7B;
 }
-.btn-link {
+textview.btn-link, .btn-link {
 	padding: 0;
 	margin-right: 20px;
 }
-.btn-link textview {
+textview.btn-link, .btn-link textview {
 	color: #007acc;
 	padding: 0;
 }
-.btn-link:hover textview {
+textview.btn-link:hover, .btn-link:hover textview {
 	color: #23527c;
 }
 .btn-default {
@@ -812,6 +812,22 @@ thumbviewitem.selected .tag-thumb-list-item-cover {
 	height: 40px;
 	box-sizing: border-box;
 	z-index: 0;
+}
+
+.view-time-range {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-color: #fff;
+}
+.view-time-range .time-range-list {
+	width: 100%;
+}
+.view-time-range .time-range {
+	font-size: 18px;
+	margin-bottom: 15px;
 }
 
 #view-search .view-body {
