--- a/res/ui.css
+++ b/res/ui.css
@@ -239,6 +239,10 @@
 	box-sizing: border-box;
 	border: 2px solid rgba(0,0,0,0);
 }
+.file-list .file-list-item-picture .picture-cover textview.tip {
+	font-size: 32px;
+	color: #aaa;
+}
 .file-list .file-list-item-picture .checkbox {
 	top: 10px;
 	right: 10px;
@@ -635,20 +639,16 @@ textedit.dialog-input {
 #picture-viewer-window .picture-switch-btn.next {
 	right: 10px;
 }
-#tip-picture-loading {
+.message.box {
 	width: 100%;
 	max-width: 120px;
 	padding: 15px 25px;
 	background-color: rgba(255,255,255,0.8);
 }
-#tip-picture-loading textview {
+.message textview {
 	color: #333;
 	font-size: 14px;
 }
-#tip-picture-not-found textview {
-	color: #fff;
-}
-
 .floating {
 	z-index: 10;
 	position: absolute;
@@ -755,22 +755,22 @@ textedit.dialog-input {
 	box-sizing: border-box;
 }
 .tag-thumb-list-item-info {
-	position: absolute;
-	bottom: 0;
 	left: 0;
+	bottom: 0;
 	width: 100%;
 	min-height: 24px;
 	padding: 5px 10px;
+	position: absolute;
 	box-sizing: border-box;
 	background-color: rgba(0,0,0,0.4);
 }
 .tag-thumb-list-item-cover {
-	display: none;
-	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	display: none;
+	position: absolute;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	background-color: rgba(255,255,255,0.4);
