完善多语言支持，修改下拉菜单样式

--- a/res/ui-skin.css
+++ b/res/ui-skin.css
@@ -182,3 +182,6 @@
 #picture-info-panel.skin-light-green starrating .mdi-star {
 	color: #44A340;
 }
+.skin-light-green .btn-dropdown.active {
+	border-color: #44BB55;
+}
