--- a/res/ui.css
+++ b/res/ui.css
@@ -669,8 +669,15 @@ textedit.dialog-input {
 	background-color: rgba(255,255,255,0.8);
 }
 .message .text {
-	color: #333;
+	color: #ccc;
 	font-size: 14px;
+}
+.icon.message .icon {
+	width: 100%;
+	font-size: 74px;
+	text-align: center;
+	display: block;
+	color: #ddd;
 }
 .floating {
 	z-index: 10;
