修改下拉菜单的实现，为排序选择菜单中已选中项添加标记

--- a/res/ui-skin.css
+++ b/res/ui-skin.css
@@ -189,3 +189,6 @@
 .skin-light-green .btn-dropdown.active {
 	border-color: #44BB55;
 }
+.skin-light-green dropdown.checkable dropdown-item .icon {
+	color: #44BB55;
+}
