--- a/res/ui.css
+++ b/res/ui.css
@@ -924,3 +924,16 @@ thumbviewitem.selected .tag-thumb-list-item-cover {
 .btn .mdi-chevron-down {
 	margin-left: 10px;
 }
+dropdown.checkable .icon,
+dropdown.checkable .text {
+	display: inline-block;
+	line-height: 24px;
+}
+dropdown.checkable dropdown-item .icon {
+	visible: false;
+	margin-right: 5px;
+	font-size: 20px;
+}
+dropdown.checkable dropdown-item.active .icon {
+	visible: true;
+}
