调整下来菜单样式，解决文件夹视图未应用排序规则的问题

--- a/res/ui.css
+++ b/res/ui.css
@@ -929,6 +929,9 @@ dropdown.checkable .text {
 	display: inline-block;
 	line-height: 24px;
 }
+dropdown.checkable dropdown-item {
+	padding-right: 20px;
+}
 dropdown.checkable dropdown-item .icon {
 	visible: false;
 	margin-right: 5px;
