添加密码设置对话框

--- a/app/assets/ui.css
+++ b/app/assets/ui.css
@@ -962,6 +962,7 @@ thumbviewitem.selected .tag-thumb-list-item-cover {
 }
 .view-time-range .time-range {
 	font-size: 18px;
+	display: block;
 	margin-bottom: 15px;
 }
 
