--- a/app/assets/ui.css
+++ b/app/assets/ui.css
@@ -5,9 +5,6 @@
 	height: 100%;
 	position: absolute;
 }
-.hide {
-	display: none;
-}
 .text, textview-i18n, textview {
 	font-size: 14px;
 	font-family: Microsoft YaHei;
@@ -225,6 +222,11 @@ textview-i18n.btn-link:hover,
 	line-height: 32px;
 	height: 32px;
 	margin: 0 0 10px 0;
+}
+.view-body .title2 {
+	font-size: 16px;
+	line-height: 24px;
+	margin: 0 0 5px 0;
 }
 .view-navbar .divider {
 	width: 1px;
@@ -1029,4 +1031,8 @@ dropdown.checkable dropdown-item.active .icon {
 	width: 100%;
 	margin-bottom: 15px;
 	padding-left: 25px;
+}
+
+.hide {
+	display: none;
 }
